[package]
name = "wfqueue"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loom = { version = "0.3", optional = true }
cache-padded = "*"
paste = "0.1"

[dev-dependencies]
crossbeam-queue = "0.2"

[profile.release]
debug = true
